Se realiza el despliegue

--- a/app/views/perfil/perfil.html.erb
+++ b/app/views/perfil/perfil.html.erb
@@ -41,7 +41,7 @@
                 <tr>
                   <th>Descripcion</th>
                   <th>Horas</th>
-                  <th>Datos de horas</th>
+                  <th>Año/mes/día</th>
                   </tr>
               </thead>
               <tbody >
