--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -68,7 +68,7 @@
                         </div>
                         <center><img class="rounded-circle"<%=  image_tag("tarjetaindex/ejecucion.jpeg", style: "width: 230px;") %></center>
                         <div class="card-body">
-                        <h5 class="card-text">En la ejecucion colocamos nuestra<br> mejor desempeño para garantizar <br>un mejor resultado, siguiendo una <br>guía muy enlazada con la planeación.<br><br></h5>
+                        <h5 class="card-text">En la ejecucion colocamos nuestro<br> mejor desempeño para garantizar <br>un mejor resultado, siguiendo una <br>guía muy enlazada con la planeación.<br><br></h5>
                         </div>
                     </div>
                 </div> 
