--- a/app/views/administrador/administrador.html.erb
+++ b/app/views/administrador/administrador.html.erb
@@ -15,19 +15,19 @@
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
         <div class="col-md p-lg mx-auto my">
             <h2 class="display-3">Registro de Nuevos trabajadores</h2>
-            <%= link_to "Trabajadores", fellows_path, class:"btn btn-warning btn-user" %>
+            <%= link_to "Trabajadores", fellows_path, class:"btn btn-success btn-user" %>
         </div>
     </div>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-secondary">
         <div class="col-md p-lg mx-auto my">
             <h2 class="display-3">Registro de horas laborales</h2>
-            <%= link_to "Regsitro de horas", payrolls_path, class:"btn btn-danger btn-user" %>
+            <%= link_to "Regsitro de horas", payrolls_path, class:"btn btn-success btn-user" %>
         </div>
     </div>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
         <div class="col-md p-lg mx-auto my">
             <h2 class="display-3">Editar perfil de administrador</h2>
-            <%= link_to "Regsitro de horas", administrators_path, class:"btn btn-danger btn-user" %>
+            <%= link_to "Regsitro de horas", administrators_path, class:"btn btn-success btn-user" %>
         </div>
     </div>
 </div>
